crates/php-parser/tests/snapshots/nikic_expr_tests__nikic_expr_new.snap
---
source: crates/php-parser/tests/nikic_expr_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "New": {
              "class": {
                "kind": {
                  "Identifier": "A"
                },
                "span": {
                  "start": 11,
                  "end": 12
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 7,
            "end": 12
          }
        }
      },
      "span": {
        "start": 7,
        "end": 14
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "New": {
              "class": {
                "kind": {
                  "Identifier": "A"
                },
                "span": {
                  "start": 18,
                  "end": 19
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "b"
                    },
                    "span": {
                      "start": 20,
                      "end": 22
                    }
                  },
                  "unpack": false,
                  "span": {
                    "start": 20,
                    "end": 22
                  }
                }
              ]
            }
          },
          "span": {
            "start": 14,
            "end": 23
          }
        }
      },
      "span": {
        "start": 14,
        "end": 51
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "New": {
              "class": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 55,
                  "end": 57
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 51,
            "end": 59
          }
        }
      },
      "span": {
        "start": 51,
        "end": 61
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "ArrayAccess": {
                    "array": {
                      "kind": {
                        "New": {
                          "class": {
                            "kind": {
                              "Variable": "a"
                            },
                            "span": {
                              "start": 65,
                              "end": 67
                            }
                          },
                          "args": []
                        }
                      },
                      "span": {
                        "start": 61,
                        "end": 67
                      }
                    },
                    "index": {
                      "kind": {
                        "String": "b"
                      },
                      "span": {
                        "start": 68,
                        "end": 71
                      }
                    }
                  }
                },
                "span": {
                  "start": 61,
                  "end": 72
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 61,
            "end": 74
          }
        }
      },
      "span": {
        "start": 61,
        "end": 76
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "StaticPropertyAccess": {
                    "class": {
                      "kind": {
                        "New": {
                          "class": {
                            "kind": {
                              "Identifier": "A"
                            },
                            "span": {
                              "start": 80,
                              "end": 81
                            }
                          },
                          "args": []
                        }
                      },
                      "span": {
                        "start": 76,
                        "end": 81
                      }
                    },
                    "member": "b"
                  }
                },
                "span": {
                  "start": 76,
                  "end": 85
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 76,
            "end": 87
          }
        }
      },
      "span": {
        "start": 76,
        "end": 111
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "MethodCall": {
              "object": {
                "kind": {
                  "New": {
                    "class": {
                      "kind": {
                        "Variable": "a"
                      },
                      "span": {
                        "start": 115,
                        "end": 117
                      }
                    },
                    "args": []
                  }
                },
                "span": {
                  "start": 111,
                  "end": 117
                }
              },
              "method": {
                "kind": {
                  "Identifier": "b"
                },
                "span": {
                  "start": 119,
                  "end": 120
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 111,
            "end": 122
          }
        }
      },
      "span": {
        "start": 111,
        "end": 124
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "MethodCall": {
              "object": {
                "kind": {
                  "PropertyAccess": {
                    "object": {
                      "kind": {
                        "New": {
                          "class": {
                            "kind": {
                              "Variable": "a"
                            },
                            "span": {
                              "start": 128,
                              "end": 130
                            }
                          },
                          "args": []
                        }
                      },
                      "span": {
                        "start": 124,
                        "end": 130
                      }
                    },
                    "property": {
                      "kind": {
                        "Identifier": "b"
                      },
                      "span": {
                        "start": 132,
                        "end": 133
                      }
                    }
                  }
                },
                "span": {
                  "start": 124,
                  "end": 133
                }
              },
              "method": {
                "kind": {
                  "Identifier": "c"
                },
                "span": {
                  "start": 135,
                  "end": 136
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 124,
            "end": 138
          }
        }
      },
      "span": {
        "start": 124,
        "end": 140
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "ArrayAccess": {
                    "array": {
                      "kind": {
                        "PropertyAccess": {
                          "object": {
                            "kind": {
                              "New": {
                                "class": {
                                  "kind": {
                                    "Variable": "a"
                                  },
                                  "span": {
                                    "start": 144,
                                    "end": 146
                                  }
                                },
                                "args": []
                              }
                            },
                            "span": {
                              "start": 140,
                              "end": 146
                            }
                          },
                          "property": {
                            "kind": {
                              "Identifier": "b"
                            },
                            "span": {
                              "start": 148,
                              "end": 149
                            }
                          }
                        }
                      },
                      "span": {
                        "start": 140,
                        "end": 149
                      }
                    },
                    "index": {
                      "kind": {
                        "String": "c"
                      },
                      "span": {
                        "start": 150,
                        "end": 153
                      }
                    }
                  }
                },
                "span": {
                  "start": 140,
                  "end": 154
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 140,
            "end": 156
          }
        }
      },
      "span": {
        "start": 140,
        "end": 217
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Parenthesized": {
              "kind": {
                "New": {
                  "class": {
                    "kind": {
                      "Identifier": "A"
                    },
                    "span": {
                      "start": 222,
                      "end": 223
                    }
                  },
                  "args": []
                }
              },
              "span": {
                "start": 218,
                "end": 223
              }
            }
          },
          "span": {
            "start": 217,
            "end": 224
          }
        }
      },
      "span": {
        "start": 217,
        "end": 225
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 225
  }
}
